--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "homepage": "https://github.com/humaiyun/DiscordVarietyBot#readme",
   "dependencies": {
+    "ascii-table": "^0.0.9",
     "discord.js": "^13.2.0-dev.1631880196.88e2622"
   }
 }
