--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "ascii-table": "^0.0.9",
     "discord.js": "^13.2.0-dev.1631880196.88e2622",
-    "relevant-urban": "^2.0.0",
-    "snoowrap": "^1.23.0"
+    "got": "^11.8.2",
+    "relevant-urban": "^2.0.0"
   }
 }
