import node-fetch

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ascii-table": "^0.0.9",
     "discord.js": "^13.2.0-dev.1631880196.88e2622",
     "got": "^11.8.2",
+    "node-fetch": "^3.0.0",
     "relevant-urban": "^2.0.0"
   }
 }
