--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "ascii-table": "^0.0.9",
     "discord.js": "^13.2.0-dev.1631880196.88e2622",
+    "discord.js-pagination": "^1.0.3",
     "got": "^11.8.2",
     "relevant-urban": "^2.0.0"
   }
