--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "git+https://github.com/humaiyun/DiscordVarietyBot.git"
   },
-  "author": "Humaiyun",
+  "author": "Humaiyun Uddin",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/humaiyun/DiscordVarietyBot/issues"
@@ -19,6 +19,7 @@
     "discord.js": "^13.2.0-dev.1631880196.88e2622",
     "got": "^11.8.2",
     "nodemon": "^2.0.13",
-    "relevant-urban": "^2.0.0"
+    "relevant-urban": "^2.0.0",
+    "require-folder": "^1.0.0"
   }
 }
