--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "discordvarietybot",
+  "name": "Keplar",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/humaiyun/DiscordVarietyBot.git"
+    "url": "git+https://github.com/humaiyun/Keplar.git"
   },
   "author": "Humaiyun Uddin",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/humaiyun/DiscordVarietyBot/issues"
+    "url": "https://github.com/humaiyun/Keplar/issues"
   },
-  "homepage": "https://github.com/humaiyun/DiscordVarietyBot#readme",
+  "homepage": "https://github.com/humaiyun/Keplar#readme",
   "dependencies": {
     "@koenie06/discord.js-pagination": "^2.1.5",
     "ascii-table": "^0.0.9",
