--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "Keplar",
     "version": "1.0.0",
-    "description": "",
-    "main": "src/index.js",
+    "description": "Multipurpose Bot",
+    "main": "index.js",
     "repository": {
         "type": "git",
-        "url": "https://github.com/humaiyun/Keplar/tree/keplar-alpha"
+        "url": "git+https://github.com/humaiyun/Keplar.git"
     },
     "scripts": {
         "start": "node index.js",
@@ -14,10 +14,11 @@
     "keywords": [],
     "author": "Humaiyun",
     "license": "ISC",
-    "homepage": "https://github.com/humaiyun/Keplar/tree/keplar-alpha#readme",
+    "homepage": "https://github.com/humaiyun/Keplar#readme",
     "dependencies": {
         "discord.js": "^13.1.0",
         "glob": "^7.1.7",
-        "mongoose": "^6.0.2"
+        "mongoose": "^6.0.2",
+        "nodemon": "^2.0.13"
     }
 }
