--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "license": "ISC",
     "homepage": "https://github.com/humaiyun/Keplar#readme",
     "dependencies": {
-        "discord.js": "^13.1.0",
+        "@discordjs/builders": "^0.6.0",
+        "ascii-table": "^0.0.9",
+        "discord.js": "^13.2.0-dev.1633133131.fe95005",
         "glob": "^7.1.7",
+        "got": "^11.8.2",
         "mongoose": "^6.0.2",
         "nodemon": "^2.0.13"
     }
