update values to prevent api error
v3.6.4
Update crypto.js
Update package.json

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "glob": "^7.1.7",
         "got": "^11.8.2",
         "mongoose": "^6.0.2",
-        "nodemon": "^2.0.13"
+        "nodemon": "^2.0.13",
+        "relevant-urban": "^2.0.0"
     }
 }
