--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@discordjs/builders": "^0.6.0",
         "ascii-table": "^0.0.9",
+        "cpu-stat": "^2.0.1",
         "discord.js": "^13.2.0-dev.1633133131.fe95005",
         "glob": "^7.1.7",
         "got": "^11.8.2",
