--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@discordjs/opus": "^0.6.0",
         "ascii-table": "^0.0.9",
         "cpu-stat": "^2.0.1",
+        "discord-player": "^5.1.0",
         "discord.js": "^13.2.0-dev.1633133131.fe95005",
         "glob": "^7.1.7",
         "got": "^11.8.2",
