--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "cpu-stat": "^2.0.1",
         "discord-player": "^5.1.0",
         "discord.js": "^13.2.0-dev.1633133131.fe95005",
+        "ffmpeg-static": "^4.4.0",
         "glob": "^7.1.7",
         "got": "^11.8.2",
         "mongoose": "^6.0.2",
